test/files/neg/bug515.check
bug515.scala:7: error: type mismatch;
 found   : java.lang.String
 required: Test.Truc
  val parent: Truc = file.getMachin
                          ^
one error found
